[package]
name = "actix-ioframe"
version = "0.5.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix framed service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-ioframe/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_ioframe"
path = "src/lib.rs"

[dependencies]
actix-service = { path = "../actix-service" }
actix-codec = { path = "../actix-codec" }
actix-utils = { path = "../actix-utils" }
actix-rt = { path = "../actix-rt" }
bytes = "0.5.3"
either = "1.5.3"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"

[dev-dependencies]
actix-connect = { path = "../actix-connect" }
actix-testing = { path = "../actix-testing" }
