[package]
name = "actix-testing"
version = "1.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix testing utils"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-testing/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actix_testing"
path = "src/lib.rs"

[dependencies]
actix-rt = { path = "../actix-rt" }
actix-macros = { path = "../actix-macros" }
actix-server = { path = "../actix-server" }
actix-service = { path = "../actix-service" }

log = "0.4"
net2 = "0.2"
futures = "0.3.1"
